# AI_framework-dev

./: .gitignore  README.md  WhyAIFrameWork.md  compiled_graph.npz  debug_forward_act_out_input.txt  debug_forward_act_out_output.txt  debug_forward_linear_input.txt  debug_forward_linear_output.txt  debug_forward_linear_param.txt  debug_forward_matmul_out_input.txt  debug_forward_matmul_out_param.txt  debug_forward_out_input.txt  debug_forward_out_output.txt  debug_forward_out_param.txt  debug_forward_y_output.txt  development_history.md  포트폴리오.md
dev/backend/graph_executor_v2/: CMakeLists.txt  README.md  __init__.py  binding_min_api.cpp  e2e_executor_v2_f16.py  pyproject.toml  smoke_test_v2.py  smoke_test_v2_f16.py
dev/backend/graph_executor_v2/executor/: graph_executor_v2.cp312-win_amd64.pyd
dev/backend/graph_executor_v2/include/: ge_v2_api.h  ge_v2_api_ex.h
dev/backend/graph_executor_v2/src/: bindings_min_api.cpp  launch_table.cpp  my_kernels.cu
dev/backend/graph_executor_v2/test/: beta_C_GELU_test.py  ge2_check_backward_debug.py  ge2_check_backward_probe.py  ge2_check_backward_probe_plus.py  ge2_min_experiments.py  ge2_smoke_test.py  ge2_test_backward.py  ge2_verify_preact.py  graph_executor_v2.cp312-win_amd64.pyd  sigmoid_perm_bias.py  test_ge_v2_all.py  test_gemm_bias_relu.py
dev/backend/regemm_epilogue/: .gitignore  CMakeLists.txt
dev/backend/regemm_epilogue/src/: launcher.cu  regemm_backward.cu  regemm_gemm_bias_act.cu
dev/backend/regemm_epilogue/tests/: CMakeLists.txt  test_backward.cpp  test_basic.cpp
graph_executor_v2/: .gitignore  CMakeLists.txt  README.md  kernel 실행이 포함되어 있는 코드 내에서 ncp-rep 파일 생성.md  nvtx.md  test 파일로부터 nvtx 캡쳐 및 실행 과정.md
graph_executor_v2/backends/cuda/: register_ops.cpp
graph_executor_v2/backends/cuda/ops/: TensoreCore 커널 스켈레톤.cu
graph_executor_v2/cuda/: ops 의 빌드 방법.md
graph_executor_v2/docs/: ARCHITECTURE.md  GRAPH.md  TESTING.md
graph_executor_v2/include/ai/: dispatch.hpp  legacy_ge2_api.h  op_schema.hpp  pybind_helpers.hpp  tensor.hpp
graph_executor_v2/kernels/regemm_epilogue/src/: launcher.cu  regemm_backward.cu  regemm_gemm_bias_act.cu
graph_executor_v2/python/examples/: train_mlp_sequential.py  train_mlp_sequential_capture.py
graph_executor_v2/python/graph_executor_v2/: _core.exp  _core.lib  _dllpath.py
graph_executor_v2/python/graph_executor_v2/graph/: capture_plan.py  exec_utils.py  execution_planner.py  graph_exec.py  graph_executor.py  pattern_fusion.py  (+4 more)
graph_executor_v2/python/test/: bench_gemm.py  test.py  test_ND_contiguous_copy.py  test_autograd_gemm.py  test_autograd_rmsnorm.py  test_concat.py  test_conv2d.py  test_conv2d_forward.py  test_conv2d_forward_only.py  test_cross_entropy.py  test_dropout.py  test_ewise.py  test_forward_gemm.py  test_gather_scatter.py  test_layernorm.py  test_memory.py  test_pad.py  test_pool2d.py  test_reductions.py  test_sdpa.py  test_sdpa_bwd.py  test_sdpa_dropout_consistency.py  test_sdpa_mask.py  test_slice.py  test_softmax.py  test_upsameple2d_bilinear.py  test_upsample2d.py
graph_executor_v2/src/bindings/: batchnorm_pybind.cpp  concat_pybind.cpp  conv2d_pybind.cpp  cross_entropy_pybind.cpp  dropout_pybind.cpp  embedding_pybind.cpp  gemm_pybind.cpp  layernorm_pybind.cpp  memory_pybind.cpp  ops_common_pybind.cpp  optimizer_pybind.cpp  pad_pybind.cpp  pool2d_pybind.cpp  py_api.cpp  rmsnorm_pybind.cpp  rnn_pybind.cpp  slice_pybind.cpp  softmax_pybind.cpp  veiw_pybind.cpp  view_pybind.cpp
graph_executor_v2/src/dispatch/: registry.cpp  selector_rules.cpp
graph_executor_v2/src/executor/: autograd_engine.cpp  mem_planner.cpp  mem_planner.hpp  scheduler.cpp  scheduler.hpp
graph_executor_v2/src/ops/: concat.cpp  conv2d.cpp  cross_entropy.cpp  dropout.cpp  elementwise.cpp  gemm.cpp  indexing.cpp  layernorm.cpp  memory.cpp  pad.cpp  pool2d.cpp  reduction.cpp  register_ops.cpp  rmsnorm.cpp  rnn.cpp  sdpa.cpp  slice.cpp  softmax.cpp  upsample2d.cpp  view.cpp
graph_executor_v2/tests/common/: capture_safety.hpp  cuda_check.hpp  device_buffer.hpp  host_utils.hpp  tensor_builder.hpp
graph_executor_v2/tests/cuda_pyd_test/: smoke_gemm_binding.py
graph_executor_v2/tests/kernel_test/: bench_gemm_binding.py
graph_executor_v2/tests/layer_test/: dense_gemm.py
graph_executor_v2/tests/python_glue_test/: glue_gemm.py
native/decision_core/: CMakeLists.txt
native/decision_core/examples/: main.cpp
native/decision_core/src/: decision.cpp  loss.cpp  regression.cpp  reject.cpp
native/discrete_core/: CMakeLists.txt
native/discrete_core/build_cuda/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  discrete_core.exp  discrete_core.lib
native/discrete_core/examples/: main.cpp
native/discrete_core/src/: bernoulli_cpu.cpp  bernoulli_cuda.cu  binomial_cpu.cpp  binomial_cuda.cu
native/modelsel_core/: CMakeLists.txt  modelsel_c.cpp  modelsel_c.h  readmd.md
native/modelsel_core/build_cpu/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  modelsel_core.lib
native/modelsel_core/examples/: main.cpp
native/modelsel_core/src/: aicbic.cpp  estimator.cpp  evaluator_cpu.cpp  evaluator_cuda.cu  kfold.cpp  metrics.cpp  report.cpp  split.cpp
native/normal_core/: CMakeLists.txt  readme.md
native/normal_core/build_cuda/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  normal_core.exp  normal_core.lib
native/normal_core/examples/: main.cpp
native/normal_core/src/: normal_cpu.cpp  normal_cuda.cu
native/prob_utils/: CMakeLists.txt  readme.md
native/prob_utils/build_cuda/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  prob_utils.exp  prob_utils.lib
native/prob_utils/examples/: main.cpp
native/prob_utils/src/: bayes_cpu.cpp  bayes_cuda.cu  log_ops_cpu.cpp  log_ops_cuda.cu
regemm/: CMakeLists.txt  build.md
regemm/benchmarks/: bench_gemm.cu  benchmarks.md
regemm/include/regemm/: bias.h  nvtx_shim.h
regemm/scripts/: build.bat  build.sh
regemm/src/: gemm_bias_act_smoke.cu  gemm_bias_act_tiled.cu  launcher.cu
regemm/tests/: CMakeLists.txt  test_basic.cpp
(+998 files in other folders)
